Fixed profile page, added some extra functionality in some of the base classes

--- a/WorkHours/res/values/strings.xml
+++ b/WorkHours/res/values/strings.xml
@@ -43,7 +43,7 @@
     <string name="button_select_date">Select date</string>
 
     <string name="button_change_details">Change details</string>
-    <string name="button_save_details">Save details</string>
+    <string name="button_save_details">Save</string>
     <string name="button_cancel_details">Cancel</string>
 
     <!-- ********************************************************** -->
